# mace-model-devi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  github_setup.md  pyproject.toml  setup.py  temp_reference.py
src/mace_model_deviation/: __init__.py  cli.py  core.py  core.py.old  utils.py
